--- a/index.html
+++ b/index.html
@@ -854,6 +854,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Ritika Das | All Rights Reserved</p>
+                <p>Designed and Developed by <a href="https://dip-sama.github.io/Protfolio-website/" target="_blank" style="color: #e83e8c;">Dip Bhattacharjee</a></p>
             </div>
         </div>
     </footer>
